tests/valid/58235_n_negative/n_negative.agu
-- Author: 58235, António Almeida

let _ : unit = 
    let a : Int = - 1;
    let b : Int = - - 1;
    let c : Int = - - - 1;
    let d : Int = - - - - 1;

    print(a); print("\n");
    print(b); print("\n");
    print(c); print("\n");
    print(d);
