tests/invalid-syntax/58235_no_argument_func/no_argument_func.agu
-- Author: 58235, António Almeida
-- Functions need at least 1 argument

let f () : Int =
    let a = 1;
    a

let _ : Unit = f()
